2006-12-08  Rob Buis  <buis@kde.org>

        Reviewed by Darin.

        Testcase for:
        http://bugs.webkit.org/show_bug.cgi?id=6074
        WebKit+SVG and FireFox disagree on invalid "transform" handling

        Also new results for transform-ignore-after-invalid.svg.

        * svg/custom/invalid-transforms-expected.checksum: Added.
        * svg/custom/invalid-transforms-expected.png: Added.
        * svg/custom/invalid-transforms-expected.txt: Added.
        * svg/custom/invalid-transforms.svg: Added.
        * svg/custom/transform-ignore-after-invalid-expected.checksum:
        * svg/custom/transform-ignore-after-invalid-expected.png:
        * svg/custom/transform-ignore-after-invalid-expected.txt:

2006-12-07  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Beth Dakin.
        
        Tests for the change and blur events in input elements.

        * fast/events/onchange-passwordfield-expected.txt: Added.
        * fast/events/onchange-passwordfield.html: Added.
        * fast/events/onchange-searchfield-expected.txt: Added.
        * fast/events/onchange-searchfield.html: Added.
        * fast/events/onchange-textfield-expected.txt: Added.
        * fast/events/onchange-textfield.html: Added.

2006-12-07  Anders Carlsson  <acarlsson@apple.com>

        Reviewed by Darin.

        <rdar://problem/4838778>
        DashboardClient crashing in WebCore::SubresourceLoader::didFail.
        
        * http/tests/xmlhttprequest/abort-crash-expected.txt: Added.
        * http/tests/xmlhttprequest/abort-crash.html: Added.
        * http/tests/xmlhttprequest/hello-world.cgi: Added.

2006-12-07  Kirby White  <KWhiteRight@gmail.com>

        Reviewed by Adele.

        http://bugs.webkit.org/show_bug.cgi?id=11771
        Bug 11771: Add a test for resetting a textarea form control

        * fast/dom/HTMLTextAreaElement/reset-textarea-expected.checksum: Added.
        * fast/dom/HTMLTextAreaElement/reset-textarea-expected.png: Added.