@@ -1,0 +1,5 @@
+Test for bug 11772: XMLSerializer.serializeToString incorrect value for CDATA nodes.
+
+Should say PASS below.
+
+PASS
