@@ -1,0 +1,15 @@
+<p>Test for <a href="http://bugs.webkit.org/show_bug.cgi?id=11772">bug 11772</a>:
+XMLSerializer.serializeToString incorrect value for CDATA nodes.</p>
+<p>Should say PASS below.</p>
+<script>
+if (window.layoutTestController)
+  layoutTestController.dumpAsText();
+
+var d = window.document.implementation.createDocument("", "", null);
+var n = d.createCDATASection("-- <cdata> --");
+var s = (new XMLSerializer()).serializeToString(n);
+if (s == "<![CDATA[-- <cdata> --]]>")
+  document.write("PASS");
+else
+  document.write("FAIL");
+</script>
